@@ -4,10 +4,15 @@
 # Usage: $ . ./dev.sh && doer misc info
 
 function doer() {
-  local LOCAL_DOER_JVM_OPTS="-Dlogback.configurationFile=./src/main/resources/container-logback.xml"
+  local OPTS="-Xms128M -Xmx512M -XX:+UnlockExperimentalVMOptions -XX:+UseZGC"
+  local LOGBACK="container-logback.xml"
+    if [[ "x${PLAIN}" == "x1" ]]; then
+      local LOGBACK="console.xml"
+    fi
+  local OPTS="-Dlogback.configurationFile=./src/main/resources/${LOGBACK}"
   if [[ "x${DEBUG}" == "x1" ]]; then
-    LOCAL_DOER_JVM_OPTS="${LOCAL_DOER_JVM_OPTS} -agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:5005"
+    local OPTS="${OPTS} -agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:5005"
   fi
 
-  java ${LOCAL_DOER_JVM_OPTS} -jar "./build/libs/doer-$(cat ./version)-all.jar" "$@"
+  java ${OPTS} -jar "./build/libs/doer-$(cat ./version)-all.jar" "$@"
 }
